--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.1.6",
     "@mui/x-charts": "^7.22.2",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "html5-qrcode": "^2.3.8",
