[FEAT] Profile Pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.3.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
@@ -17,12 +18,15 @@
     "@mui/styled-engine-sc": "^6.1.6",
     "@mui/x-charts": "^7.22.2",
     "@types/styled-components": "^5.1.34",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
@@ -34,8 +38,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
