--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc-silent -p './tsconfig.json' --suppress @ && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -34,7 +34,8 @@
     "react-webcam": "^7.2.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsc-silent": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
